--- a/src/index.html
+++ b/src/index.html
@@ -4,11 +4,41 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet">
     <title>My framework</title>
 </head>
 <body>
     <div id="app" class="container">
-        Webpack
+        <div class="excel">
+            <div class="excel__header">
+                <input type="text" class="excel__title-input" value="Новая таблица">
+                <div>
+                    <div class="button">
+                        <span class="material-icons">
+                            logout
+                        </span>
+                    </div>
+                    <div class="button">
+                        <span class="material-icons">
+                            delete
+                        </span>
+                    </div>
+                </div>
+            </div>
+
+            <div class="excel__toolbar">
+
+            </div>
+
+            <div class="excel__formula">
+
+            </div>
+
+            <div class="excel__table">
+
+            </div>
+        </div>
     </div>
 </body>
 </html>
