--- a/src/index.html
+++ b/src/index.html
@@ -9,36 +9,6 @@
     <title>My framework</title>
 </head>
 <body>
-    <div id="app" class="container">
-        <div class="excel">
-            <div class="excel__header">
-                <input type="text" class="excel__title-input" value="Новая таблица">
-                <div>
-                    <div class="button">
-                        <span class="material-icons">
-                            logout
-                        </span>
-                    </div>
-                    <div class="button">
-                        <span class="material-icons">
-                            delete
-                        </span>
-                    </div>
-                </div>
-            </div>
-
-            <div class="excel__toolbar">
-
-            </div>
-
-            <div class="excel__formula">
-
-            </div>
-
-            <div class="excel__table">
-
-            </div>
-        </div>
-    </div>
+   <div id="app"></div>
 </body>
 </html>
